--- a/src/public/styles.css
+++ b/src/public/styles.css
@@ -1,11 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
 
-*, html {
+* {
     outline: 0;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font: 12px 400 'Roboto';
+}
+
+body {
+    font-size: 12px;
+    font-weight: 400;
+    font-family: 'Roboto', sans-serif;
 }
 
 .container {
@@ -25,7 +30,7 @@
 }
 
 .container .apresentation .p-apresentation {
-    max-width: 100%;
+    max-width: 70%;
 }
 
 .container .apresentation h1 {
@@ -61,11 +66,17 @@
     margin: 30px 20px;
 }
 
-.graphic-div h2 {
+.graphic-div h3 {
     color: #333;
     margin: 10px 10px;
     text-align: center;
     font-size: 20px;
+}
+
+.graphics-container h2 {
+    text-align: center;
+    font-size: 22px;
+    color: #222;
 }
 
 
