--- a/src/views/graph/graphics.njk
+++ b/src/views/graph/graphics.njk
@@ -1,45 +1,47 @@
 <div class="graphics-container">
     <input type='hidden' id="value_from_server" value={{all}} />
+        <h2>Variação no número de vagas</h2>
     <div class="all_jobs">
         <div class="graphic-div">
-            <h2>Variação em Brasília</h2>
-            <canvas id="myChart-line" width="200" height="90" state="BSB"></canvas>
+            <h3>Variação em Brasília</h3>
+            <canvas id="myChart-line" width="100%" height="50%" state="BSB"></canvas>
         </div>
 
         <div class="graphic-div">
-            <h2>Variação em São Paulo</h2>
-            <canvas id="myChart-line" width="200" height="90" state="BSB"></canvas>
+            <h3>Variação em São Paulo</h3>
+            <canvas id="myChart-line" width="100%" height="50%" state="BSB"></canvas>
         </div>
 
         <div class="graphic-div">
-            <h2>Variação em Belo Horizonte</h2>
-            <canvas id="myChart-line" width="200" height="90" state="BSB"></canvas>
+            <h3>Variação em Belo Horizonte</h3>
+            <canvas id="myChart-line" width="100%" height="50%" state="BSB"></canvas>
         </div>
 
         <div class="graphic-div">
-            <h2>Variação em Florianópolis</h2>
-            <canvas id="myChart-line" width="200" height="90" state="BSB"></canvas>
+            <h3>Variação em Florianópolis</h3>
+            <canvas id="myChart-line" width="100%" height="50%" state="BSB"></canvas>
         </div>
     </div>
+    <h2>Quantidade de vagas nessa semana</h2>
     <div class="all_jobs">
         <div class="graphic-div">
-            <h2>Vagas em Brasília</h2>
-            <canvas id="myChart" width="200" height="90" state="BSB"></canvas>
+            <h3>Vagas em Brasília</h3>
+            <canvas id="myChart" width="100%" height="50%" state="BSB"></canvas>
         </div>
 
         <div class="graphic-div">
-            <h2>Vagas em São Paulo</h2>
-            <canvas id="myChart" width="200" height="90"  state="SP"></canvas>
+            <h3>Vagas em São Paulo</h3>
+            <canvas id="myChart" width="100%" height="50%"  state="SP"></canvas>
         </div>
 
         <div class="graphic-div">
-            <h2>Vagas em Belo Horizonte</h2>
-            <canvas id="myChart" width="200" height="90"  state="MG"></canvas>
+            <h3>Vagas em Belo Horizonte</h3>
+            <canvas id="myChart" width="100%" height="50%"  state="MG"></canvas>
         </div>
 
         <div class="graphic-div">
-            <h2>Vagas em Florianópolis</h2>
-            <canvas id="myChart" width="200" height="90"  state="SC"></canvas>
+            <h3>Vagas em Florianópolis</h3>
+            <canvas id="myChart" width="100%" height="50%"  state="SC"></canvas>
         </div>
     </div>
 </div>
