--- a/src/views/graph/graphics.njk
+++ b/src/views/graph/graphics.njk
@@ -4,22 +4,22 @@
     <div class="all_jobs">
         <div class="graphic-div">
             <h3>Variação em Brasília</h3>
-            <canvas id="myChart-line" width="100%" height="50%" state="BSB"></canvas>
+            <canvas id="myChart-line" width="90%" height="50%" state="BSB"></canvas>
         </div>
 
         <div class="graphic-div">
             <h3>Variação em São Paulo</h3>
-            <canvas id="myChart-line" width="100%" height="50%" state="BSB"></canvas>
+            <canvas id="myChart-line" width="90%" height="50%" state="SP"></canvas>
         </div>
 
         <div class="graphic-div">
             <h3>Variação em Belo Horizonte</h3>
-            <canvas id="myChart-line" width="100%" height="50%" state="BSB"></canvas>
+            <canvas id="myChart-line" width="90%" height="50%" state="MG"></canvas>
         </div>
 
         <div class="graphic-div">
             <h3>Variação em Florianópolis</h3>
-            <canvas id="myChart-line" width="100%" height="50%" state="BSB"></canvas>
+            <canvas id="myChart-line" width="90%" height="50%" state="SC"></canvas>
         </div>
     </div>
     <h2>Quantidade de vagas nessa semana</h2>
