--- a/src/views/main/index.njk
+++ b/src/views/main/index.njk
@@ -14,7 +14,10 @@
                     <h1>Variação no número de vagas publicadas em função do tempo (em semanas)</h1>
                     <div class="p-apresentation">
                         <p>Visualização do número de vagas ao longo das útlimas semanas usando como base informações contidas nas plataformas do LinkedIn e Catho em algumas cidades brasileiras.</p>
-                        <p></p>
+                        <div class="buttons">
+                            <button id="linkedinButton" value="LINKEDIN" onclick="changeOption(this)">LinkedIn</button>
+                            <button id="catho" value="CATHO" onclick="changeOption(this)">Catho</button>
+                        </div>
                     </div>
                 {% include "graph/graphics.njk" %}
                 </div>
