add change color button

--- a/src/views/main/index.njk
+++ b/src/views/main/index.njk
@@ -15,8 +15,8 @@
                     <div class="p-apresentation">
                         <p>Visualização do número de vagas ao longo das útlimas semanas usando como base informações contidas nas plataformas do LinkedIn e Catho em algumas cidades brasileiras.</p>
                         <div class="buttons">
-                            <button id="linkedinButton" value="LINKEDIN" onclick="changeOption(this)">LinkedIn</button>
-                            <button id="catho" value="CATHO" onclick="changeOption(this)">Catho</button>
+                            <button id="linkedinButton" class="buttonSelect" value="LINKEDIN" onclick="changeOption(this)">LinkedIn</button>
+                            <button id="catho" class="buttonSelect" value="CATHO" onclick="changeOption(this)">Catho</button>
                         </div>
                     </div>
                 {% include "graph/graphics.njk" %}
