--- a/src/views/main/index.njk
+++ b/src/views/main/index.njk
@@ -5,7 +5,10 @@
         <meta name="viewport" content="width=device width, initial-scale=1.0" />
         <link rel="stylesheet" href="styles.css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.css" integrity="sha256-aa0xaJgmK/X74WM224KMQeNQC2xYKwlAt08oZqjeF0E=" crossorigin="anonymous" />
-        <title>Variação de vagas</title>
+        
+        <link rel='shortcut icon' href='favicon.ico' />
+        <link rel='icon' href='favicon.ico' />
+        <title>E as vagas?</title>
 
     <head>
         <body>
@@ -13,7 +16,8 @@
                 <div class="apresentation">
                     <h1>Variação no número de vagas publicadas em função do tempo (em semanas)</h1>
                     <div class="p-apresentation">
-                        <p>Visualização do número de vagas ao longo das útlimas semanas usando como base informações contidas nas plataformas do LinkedIn e Catho em algumas cidades brasileiras.</p>
+                        <p>Visualização do número de vagas ao longo das útlimas semanas usando como base disponibilizadas nas plataformas do LinkedIn e Catho em algumas cidades brasileiras.</p>
+                        <p>Os dados são atualizados durante o final de semana. O código está disponível <a href="https://github.com/dijsilva/jobs-variation" target="_blank">aqui.</a></p>
                         <div class="buttons">
                             <button id="linkedinButton" class="buttonSelect" value="LINKEDIN" onclick="changeOption(this)">LinkedIn</button>
                             <button id="catho" class="buttonSelect" value="CATHO" onclick="changeOption(this)">Catho</button>
