--- a/src/views/main/index.njk
+++ b/src/views/main/index.njk
@@ -1,16 +1,6 @@
 <!DOCTYPE html />
 <html>
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device width, initial-scale=1.0" />
-        <link rel="stylesheet" href="styles.css" />
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.css" integrity="sha256-aa0xaJgmK/X74WM224KMQeNQC2xYKwlAt08oZqjeF0E=" crossorigin="anonymous" />
-        
-        <link rel='shortcut icon' href='favicon.ico' />
-        <link rel='icon' href='favicon.ico' />
-        <title>E as vagas?</title>
-
-    <head>
+        {% include "_partials/head.njk" %}
         <body>
             <div class="container">
                 <div class="apresentation">
@@ -26,8 +16,7 @@
                 {% include "graph/graphics.njk" %}
                 </div>
             </div>
-        <body>
+        </body>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js" integrity="sha256-R4pqcOYV8lt7snxMQO/HSbVCFRPMdrhAFMH+vr9giYI=" crossorigin="anonymous"></script>
-        <script src="scripts.js" />
-</script>
+        <script type="text/javascript" src="scripts.js"></script>
 </html>
