--- a/src/views/_partials/head.njk
+++ b/src/views/_partials/head.njk
@@ -7,6 +7,7 @@
         
         <link rel='shortcut icon' href='favicon.ico' />
         <link rel='icon' href='favicon.ico' />
+        <meta name="theme-color" content="#222" />
         <title>E as vagas?</title>
 
     <head>
