--- a/src/views/main/index.njk
+++ b/src/views/main/index.njk
@@ -6,8 +6,8 @@
                 <div class="apresentation">
                     <h1>Variação no número de vagas publicadas em função do tempo (em semanas)</h1>
                     <div class="p-apresentation">
-                        <p>Visualização do número de vagas ao longo das útlimas semanas usando como base disponibilizadas nas plataformas do LinkedIn e Catho em algumas cidades brasileiras.</p>
-                        <p>Os dados são atualizados duas vezes por semana, geralmente na quarta e no domingo (com exceção do primeiro e do segundo registro, que tiveram um intervalo de 1 semana). O código está disponível <a href="https://github.com/dijsilva/jobs-variation" target="_blank">aqui.</a></p>
+                        <p>Número de vagas de trabalho ao longo das últimas semanas. Os dados são obtidos por meio de um crawler que pega os dados do LinkedIn e da Catho para 4 cidades brasileiras.</p>
+                        <p>Os dados são atualizados duas vezes por semana, geralmente na segunda e na sexta (com exceção dos primeiros registros). O código está disponível <a href="https://github.com/dijsilva/jobs-variation" target="_blank">aqui.</a></p>
                         <div class="buttons">
                             <button id="linkedinButton" class="buttonSelect" value="LINKEDIN" onclick="changeOption(this)">LinkedIn</button>
                             <button id="catho" class="buttonSelect" value="CATHO" onclick="changeOption(this)">Catho</button>
