--- a/src/views/main/index.njk
+++ b/src/views/main/index.njk
@@ -7,7 +7,7 @@
                     <h1>Variação no número de vagas publicadas em função do tempo (em semanas)</h1>
                     <div class="p-apresentation">
                         <p>Número de vagas de trabalho ao longo das últimas semanas. Os dados são obtidos por meio de um crawler que pega os dados do LinkedIn e da Catho para 4 cidades brasileiras.</p>
-                        <p>Os dados são atualizados duas vezes por semana, geralmente na segunda e na sexta (com exceção dos primeiros registros). O código está disponível <a href="https://github.com/dijsilva/jobs-variation" target="_blank">aqui.</a></p>
+                        <p>O código está disponível <a href="https://github.com/dijsilva/jobs-variation" target="_blank">aqui.</a></p>
                         <div class="buttons">
                             <button id="linkedinButton" class="buttonSelect" value="LINKEDIN" onclick="changeOption(this)">LinkedIn</button>
                             <button id="catho" class="buttonSelect" value="CATHO" onclick="changeOption(this)">Catho</button>
